Fixed overflowing text

--- a/static/css/view.css
+++ b/static/css/view.css
@@ -27,7 +27,10 @@ main{
   padding-top: 4% ;  
   
 }
-
+.container{
+  clear:both;
+  overflow-wrap: break-word;
+}
 .content_img{
   position: relative;
   float: left;
